# statuscheck

./: README.md  main.py  pyproject.toml  urls.txt
tests/: test_main.py
